# inkwell_ai

./: .gitignore  README.md  devto_post_result.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/inkwell_ai/: crew.py  main.py
src/inkwell_ai/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  custom_tool.py
src/tools/blog_platform/: dev_to.py  linkedin.py  medium.py  twitter.py
src/utils/: __init__.py  logger.py
tests/: test_write_task.py
